// ============================================================
// Internal Procurement System - ERD (Updated with stock_movements)
// dbdiagram.io
// ============================================================

Table users {
  id uuid [pk, not null, note: 'Primary Key']
  department_id uuid [ref: > departments.id, not null]
  name varchar(150) [not null]
  email varchar(150) [unique, not null]
  role varchar(30) [not null, note: 'employee | purchasing_staff | purchasing_manager | warehouse']
  password_hash varchar(255) [not null]
  is_active boolean [default: true]
  deleted_at timestamp [null, note: 'Soft delete']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table departments {
  id uuid [pk, not null]
  name varchar(100) [not null]
  code varchar(20) [unique, not null, note: 'e.g. IT, HR, FIN']
  head_user_id uuid [null, ref: > users.id, note: 'Kepala departemen']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table requests {
  id uuid [pk, not null]
  requester_id uuid [ref: > users.id, not null]
  department_id uuid [ref: > departments.id, not null]
  title varchar(255) [not null]
  notes text [null]
  priority varchar(20) [default: 'normal', note: 'low | normal | high | urgent']
  status varchar(30) [not null, default: 'draft', note: 'draft | submitted | verified | approved | rejected | in_procurement | completed | cancelled']
  version integer [default: 1, note: 'Optimistic locking untuk concurrent modification']
  submitted_at timestamp [null]
  completed_at timestamp [null]
  deleted_at timestamp [null, note: 'Soft delete']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table request_items {
  id uuid [pk, not null]
  request_id uuid [ref: > requests.id, not null]
  stock_id uuid [ref: > stock.id, null, note: 'Null jika item belum ada di master stok']
  item_name varchar(150) [not null]
  category varchar(100) [not null, note: 'e.g. ATK, elektronik, furnitur']
  qty_requested integer [not null]
  unit varchar(30) [not null, note: 'pcs | box | rim | unit']
  notes text [null]
  created_at timestamp [default: `now()`]
}

Table approvals {
  id uuid [pk, not null]
  request_id uuid [ref: > requests.id, not null]
  approver_id uuid [ref: > users.id, not null]
  step integer [not null, note: '1 = Purchasing Staff (verifikasi), 2 = Manager (approve)']
  status varchar(20) [not null, default: 'pending', note: 'pending | approved | rejected']
  remarks text [null]
  acted_at timestamp [null]
  created_at timestamp [default: `now()`]

  indexes {
    (request_id, step) [unique, name: 'uq_approval_request_step', note: 'Mencegah double approval']
  }
}

Table stock {
  id uuid [pk, not null]
  sku varchar(50) [unique, not null]
  name varchar(150) [not null]
  category varchar(100) [not null]
  qty_available integer [not null, default: 0, note: 'Stok yang benar-benar bisa digunakan']
  qty_reserved integer [not null, default: 0, note: 'Stok yang sudah diklaim request aktif']
  unit varchar(30) [not null]
  location varchar(100) [null, note: 'Lokasi rak/gudang']
  minimum_stock integer [default: 0, note: 'Threshold untuk alert pengadaan']
  updated_at timestamp [default: `now()`]
  created_at timestamp [default: `now()`]
}

Table vendors {
  id uuid [pk, not null]
  name varchar(150) [not null]
  contact_person varchar(100) [null]
  email varchar(150) [null]
  phone varchar(30) [null]
  address text [null]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table procurement_orders {
  id uuid [pk, not null]
  request_item_id uuid [ref: > request_items.id, not null]
  vendor_id uuid [ref: > vendors.id, not null]
  created_by uuid [ref: > users.id, not null, note: 'Purchasing staff yang membuat PO']
  qty_ordered integer [not null]
  unit_price decimal(15,2) [null]
  total_price decimal(15,2) [null, note: 'qty_ordered * unit_price']
  status varchar(30) [not null, default: 'pending', note: 'pending | ordered | shipped | received | cancelled']
  ordered_at timestamp [null]
  received_at timestamp [null]
  notes text [null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table status_history {
  id uuid [pk, not null]
  request_id uuid [ref: > requests.id, not null]
  changed_by uuid [ref: > users.id, not null]
  from_status varchar(30) [null, note: 'Null jika ini entry pertama (DRAFT)']
  to_status varchar(30) [not null]
  remarks text [null]
  created_at timestamp [default: `now()`]

  note: 'Append-only. Tidak boleh ada UPDATE atau DELETE di tabel ini.'
}

// NEW TABLE
Table stock_movements {
  id uuid [pk, not null]
  stock_id uuid [ref: > stock.id, not null]
  request_id uuid [ref: > requests.id, null]
  procurement_order_id uuid [ref: > procurement_orders.id, null]
  moved_by uuid [ref: > users.id, not null, note: 'Aktor yang memicu mutasi']
  movement_type varchar(20) [not null, note: 'in | out | adjustment']
  quantity integer [not null, note: 'Jumlah mutasi (+/- direpresentasikan oleh movement_type)']
  quantity_before integer [not null, default: 0]
  quantity_after integer [not null, default: 0]
  unit_price decimal(15,2) [null, note: 'Opsional, terisi untuk mutasi dari PO/adjustment']
  notes text [null]
  moved_at timestamp [default: `now()`]
  created_at timestamp [default: `now()`]

  indexes {
    (stock_id, moved_at) [name: 'idx_stock_movements_stock_date']
    (movement_type, moved_at) [name: 'idx_stock_movements_type_date']
    (request_id, moved_at) [name: 'idx_stock_movements_request_date']
    (procurement_order_id, moved_at) [name: 'idx_stock_movements_po_date']
  }
}

// ============================================================
// INDEXES (tambahan di luar constraint)
// ============================================================

// requests: filter by status (query paling sering)
// CREATE INDEX idx_requests_status ON requests(status) WHERE deleted_at IS NULL;

// requests: reporting per department
// CREATE INDEX idx_requests_dept_date ON requests(department_id, created_at DESC);

// stock: lookup by SKU
// UNIQUE INDEX sudah dibuat via sku field di atas

// status_history: timeline per request
// CREATE INDEX idx_status_history_request ON status_history(request_id, created_at);

// procurement_orders: per vendor untuk laporan pembelian
// CREATE INDEX idx_procurement_vendor ON procurement_orders(vendor_id, ordered_at DESC);
